body overflow fixed

--- a/src/app/entities/components/nav-panel/nav-panel.component.css
+++ b/src/app/entities/components/nav-panel/nav-panel.component.css
@@ -2,9 +2,9 @@
     position: relative;
 	width: 10rem;
 	height: 100vh;
-	padding: 10rem 2.5rem 5rem 2rem;
+	padding: 6rem 2.5rem 5rem 2rem;
 	background-color: var(--light-lilac);
-	transition: 2px; 
+    margin-top: 0;
 }
 
 .menu {
