--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,4 @@ html, body {
     height: 100%;
     font-size: 16px;
  }
-body { margin: 0; font-family: Open Sans, "Open Sans", sans-serif; }
+body { margin: 0; font-family: Open Sans, "Open Sans", sans-serif; overflow: hidden;}
